2004-08-31  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (vino): add a dependency on gnutls.
	Fixes bug #150928.

	* modulesets/gnome26.modules, gnome28.modules (intltool): depend
	on gnome-common for the autogen script.  Patch from bug #151189 by
	Scott Tsai <scottt958@yahoo.com.tw>.

2004-08-30  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules: Add e-d-s dependency to gnome-panel.

2004-08-29  Manish Singh  <yosh@gimp.org>

	* jhbuild/utils/arch.py
	* jhbuild/utils/cvs.py
	* jhbuild/utils/svn.py: fix a few ytpos and cut'n'paste thinkos.

2004-08-26  JP Rosevear  <jpr@novell.com>

	* modulesets/gnome28.modules: update soup branch

2004-08-24  Calum Benson  <calum.benson@sun.com>

	* modulesets/gnome28.modules:

	Build gnome-2-8 branch of gcalctool (which doesn't have
	the new operator precedence features).

2004-08-19  Tuomas Kuosmanen  <tigert@novell.com>

	* README (command): Added mention about gnu-arch requirement to  
	help users like me! :) with the wtf?-syndrome when jhbuild wouldnt
	work at all unless "tla" (gnu-arch) is installed.. Feel free to
	edit better, sorry to commit without your knowledge, but I couldnt
	find you online and this seemed like an acute issue.

2004-08-17  James Henstridge  <james@jamesh.id.au>

	Based on patch on bug 145393 by Thomas Fitzsimmons:

	* jhbuild/config.py (prependpath): function to store path values
	that will be prepended to various environment variables after
	jhbuild has prepended its values.
	(Config.setup_env): process the prepend values.

2004-08-17  Christophe Fergeau  <teuf@gnome.org>

	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules: use latest gnutls and opencdk versions

2004-08-11  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (gnome-volume-manager): add
	gnome-volume-manager.  Patch from Darren Adams
	<darrenadams@dsl.pipex.com> in bug #149067.

	* jhbuild/frontends/tinderbox.py