@@ -38,9 +38,9 @@
     <source href="http://ftp.gnu.org/gnu/automake/automake-1.8.5.tar.bz2"
             size="663182" md5sum="0114aa6d7dc32112834b68105fb8d7e2" />
   </tarball>
-  <tarball id="automake-1.9" version="1.9">
-    <source href="http://ftp.gnu.org/gnu/automake/automake-1.9.tar.bz2"
-            size="696476" md5sum="c0b6434087e3be0606ef9d172238f26c" />
+  <tarball id="automake-1.9" version="1.9.1">
+    <source href="http://ftp.gnu.org/gnu/automake/automake-1.9.1.tar.bz2"
+            size="697785" md5sum="65143af82931c2c4d703d3a17c1c9d15" />
   </tarball>
 
   <tarball id="pkg-config" version="0.15.0">
