@@ -1,5 +1,10 @@
 2004-08-31  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/commands/sanitycheck.py (do_sanitycheck): perform
+	sanitychecks on Automake 1.9 too.
+
+	* modulesets/bootstrap.modules (automake-1.9): update to 1.9.1.
+
 	* modulesets/gnome28.modules (vino): add a dependency on gnutls.
 	Fixes bug #150928.
 
